# tpch_monetdb

./: .dockerignore  .gitignore  COMPLETION_GUIDE.md  README.md  fix.py  fix_script.py  pyproject.toml  run_optim_loop_tpch_monetdb.py  run_outer_loop_bg.sh  run_outer_loop_tpch_monetdb.py
docker/tpch-monetdb/: Dockerfile  deploy.sh  docker-compose.yml
optional_tests/: test_assignment_perf_optional_public.py
tpch_monetdb/: .env_example  bootstrap_env.py  config.py  main_tpch_monetdb.py  run_gen_base_impl_tpch_monetdb.py  run_gen_storage_plan_tpch_monetdb.py  runtime_stage_policy.py  runtime_workspace.py
tpch_monetdb/agent_rules/: code-style.md  data-contract.md  kernel.md  optimization.md  runtime-infra.md  scripted.md  tpch-monetdb-runtime.md  tpch-validator.md
tpch_monetdb/benchmark/: __init__.py  manifest.py  providers.py  runtime_accounting.py
tpch_monetdb/conversations/: agent_text_registry.py  compact_prompts.py  conversation.py  hotspot_summary_markdown.py  optimization_conversation_tpch_monetdb.py  optimization_instrumentation.py  optimization_validation.py  scripted_conversation.py  scripted_prompts_gen.py  tpch_monetdb_prompts_gen.py
tpch_monetdb/dataset/: dataset_tables_dict.py  query_gen_factory.py
tpch_monetdb/llm_cache/: __init__.py  artifact_ledger.py  auto_compact.py  cached_compaction_session.py  cached_litellm.py  cached_litellm_compaction.py  cached_openai.py  context_budget.py  context_lifecycle_v3.py  deepseek_reasoning_replay.py  git_snapshotter.py  litellm_model_cost_overrides.json  litellm_model_costs.py  litellm_retry.py  logger.py  (+6 more)
(+321 files in other folders)
